[gd_scene load_steps=11 format=3 uid="uid://dfsixgko8uqlv"]

[ext_resource type="Script" path="res://AbstractGame.gd" id="1_6gu75"]
[ext_resource type="Texture2D" uid="uid://y8k8tjlbaga2" path="res://ui/progress_bar.png" id="2_ghdyu"]
[ext_resource type="Texture2D" uid="uid://bjrex6bt8fjba" path="res://ui/progress_bar_fill.png" id="3_egoyd"]
[ext_resource type="Script" path="res://hud/Health.gd" id="4_ux4s4"]
[ext_resource type="Script" path="res://hud/CiviliansLeft.gd" id="5_oa3xf"]
[ext_resource type="PackedScene" uid="uid://djt0jq7486mc6" path="res://hud/UnderAttack.tscn" id="7_kacti"]
[ext_resource type="PackedScene" uid="uid://dsmalws6v4e8y" path="res://ui/game-over/GameOver.tscn" id="8_rpob0"]
[ext_resource type="PackedScene" uid="uid://dc3c33hwkauei" path="res://hud/UpgradeSelection.tscn" id="9_6p8ox"]
[ext_resource type="PackedScene" uid="uid://d0rrwdxtxpel4" path="res://ui/level-end/LevelEnd.tscn" id="9_chrlk"]
[ext_resource type="PackedScene" uid="uid://cg2fbsneh5pmk" path="res://hud/ResourcesHUD.tscn" id="10_xm5jn"]

[node name="Game" type="Node2D"]
script = ExtResource("1_6gu75")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Health" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 13.0
offset_right = -324.0
offset_bottom = -241.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
value = 10.0
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_under = ExtResource("2_ghdyu")
texture_progress = ExtResource("3_egoyd")
tint_progress = Color(1, 0.341176, 0.776471, 1)
script = ExtResource("4_ux4s4")

[node name="CiviliansLeft" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "100 civilians left"
horizontal_alignment = 2
script = ExtResource("5_oa3xf")

[node name="UnderAttack" parent="CanvasLayer" instance=ExtResource("7_kacti")]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("8_rpob0")]
visible = false

[node name="LevelEnd" parent="CanvasLayer" instance=ExtResource("9_chrlk")]
visible = false

[node name="UpgradeSelection" parent="CanvasLayer" instance=ExtResource("9_6p8ox")]

[node name="ResourcesHUD" parent="CanvasLayer" instance=ExtResource("10_xm5jn")]
